src/test/run-pass/irrefutable-unit.rs
// pretty-expanded FIXME #23616

pub fn main() {
    let ((),()) = ((),());
}
